k8s/apps/storage/k8s-csi-restarter/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-csi-restarter
  namespace: k8s-csi-restarter
  labels:
    app.kubernetes.io/name: k8s-csi-restarter
    app.kubernetes.io/instance: k8s-csi-restarter
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-csi-restarter
      app.kubernetes.io/instance: k8s-csi-restarter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-csi-restarter
        app.kubernetes.io/instance: k8s-csi-restarter
    spec:
      serviceAccountName: k8s-csi-restarter
      containers:
        - name: restarter
          image: ghcr.io/eaglesemanation/k8s-csi-restarter:v0.1.0
