k8s/apps/storage/k8s-csi-restarter/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-csi-restarter
  namespace: k8s-csi-restarter
  labels:
    app.kubernetes.io/name: k8s-csi-restarter
    app.kubernetes.io/instance: k8s-csi-restarter
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: k8s-csi-restarter
    app.kubernetes.io/instance: k8s-csi-restarter
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
