k8s/apps/storage/k8s-csi-restarter/ingress.k8s.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-csi-restarter
  namespace: k8s-csi-restarter
  labels:
    app.kubernetes.io/name: k8s-csi-restarter
  annotations:
    kubernetes.io/ingress.class: ingress-internal-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`k8s-csi-restarter.${CLUSTER_DOMAIN}`)
      services:
        - name: k8s-csi-restarter
          namespace: k8s-csi-restarter
          port: http
